[package]
name = "clayout"
version = "0.3.3"
description = "Translate C++/Rust type into C type with the same memory layout."
repository = "https://github.com/hidva/clayout"
readme = "../README.md"
keywords = ["debug", "DWARF"]
categories = ["development-tools::debugging"]
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
parser = { package = "ddbug_parser", version = "0.3.0", path = "../parser" }
